crates/wdl-grammar/tests/parsing/imports-symbolic-leading-comma/source.errors
error: expected selected member, but found `,`
  ┌─ tests/parsing/imports-symbolic-leading-comma/source.wdl:3:10
  │
3 │ import { , } from openwdl/csvkit
  │          ^ unexpected `,`

