crates/wdl-grammar/tests/parsing/imports-symbolic-leading-comma/source.wdl
version 1.4

import { , } from openwdl/csvkit
